<resources>
    <string name="app_name">Cálculo Combustível</string>
    <string name="total_kms">Total de quilômetros</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="kms_per_liter">KMs por litro</string>
    <string name="total_spent">SEU GASTO TOTAL SERÁ DE :</string>
    <string name="distance">Distância</string>
    <string name="price">Preço</string>
    <string name="autonomy">Autonomia</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">CALCULAR</string>
    <string name="shared">Shared</string>
    <string name="data">Dom, 28</string>
    <string name="posto">Posto Tilu</string>
    <string name="abastecimento">Abastecimento :</string>
    <string name="valor">RS 50,00</string>

</resources>