<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/img"
        android:layout_marginTop="20dp"
        android:src="@drawable/undraw_trip_re_f724"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edt_distancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/teal_200"
        android:gravity="center"
        android:hint="@string/distance"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/total_kms" />

    <EditText
        android:id="@+id/edt_preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/teal_200"
        android:gravity="center"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/price_per_liter" />

    <EditText
        android:id="@+id/edt_autonimia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/teal_200"
        android:gravity="center"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/kms_per_liter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/teal_700"
        android:gravity="center"
        style="@style/ThemeOverlay.AppCompat.Light"
        android:text="@string/total_spent"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_custon"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/valor_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_button"
        android:gravity="center"
        android:text="@string/total_value"
        android:textColor="@color/white"
        android:textSize="38sp" />


</LinearLayout>